more progress still WIP
--Working features--
Scheduling a reminder,
reminder firing a ping at the appropriate time
retrieving a list of scheduled reminders.

--TODO projects--
Removal of reminders
polish of Times (still showing in military time)
reboot persistence (json file?)